<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>order_action</name>
  <version>0.0.0</version>
  <description>Action server and client for ordering drinks</description>
  <maintainer email="hwlee0108@naver.com">hwlee20</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>action_interfaces</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
